--- a/shared.gpr.in
+++ b/shared.gpr.in
@@ -61,11 +61,13 @@ project Shared is
       case Build is
          when "Debug" =>
              for Switches ("Ada") use
-                ("-gnat05", "-gnatQ", "-gnatwae", "-gnatay", "-g", "-O0");
+                ("-gnat05", "-gnatQ", "-gnatwae", "-gnatay", "-g", "-O0",
+                 "-Werror=format-security");
              for Switches ("C") use ("-g", "-O0");
          when "Production" =>
              for Switches ("Ada") use
-                ("-gnat05", "-gnatQ", "-O2", "-gnatn", "-gnatws");
+                ("-gnat05", "-gnatQ", "-O2", "-gnatn", "-gnatws",
+                 "-Werror=format-security");
              for Switches ("C") use ("-O2");
       end case;
 
